#61854 Upgrade to GraphHopper 8.0